--- a/Addin/Safeguard.ExcelAddin.csproj
+++ b/Addin/Safeguard.ExcelAddin.csproj
@@ -186,8 +186,6 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="AddinViewModel.cs" />
-    <Compile Include="ISafeguard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -218,9 +216,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Form.xaml.cs">
-      <DependentUpon>Form.xaml</DependentUpon>
-    </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -234,10 +229,10 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Form.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <ProjectReference Include="..\Common.Ui\Safeguard.Common.Ui.csproj">
+      <Project>{CE609869-7885-41C9-AC1D-B66AB0A983D9}</Project>
+      <Name>Safeguard.Common.Ui</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
