--- a/Common.Ui/Safeguard.Common.Ui.csproj
+++ b/Common.Ui/Safeguard.Common.Ui.csproj
@@ -100,9 +100,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Fonts\Cadence.otf" />
     <None Include="Fonts\IconFontCommon.ttinclude" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Safeguard.Common.csproj">
